--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- custom css stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
 
     <title>Axit!</title>
   </head>
@@ -42,13 +43,13 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#pricing">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Reviews</a>
+          <a class="nav-link" href="#feedback">Reviews</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -104,15 +105,17 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
           </div>
           <div class="col-md-8">
-            <ul>
-              <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-              <li><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-              <li><a href=""><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-              <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-              <li><a href=""><i class="fa fa-stumbleupon" aria-hidden="true"></i></a></li>
-              <li class="wifi"><a href=""><i class="fa fa-wifi" aria-hidden="true"></i></a></li>
-            </ul>
+            <div class="icon">
+              <ul>
+               <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+               <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+               <li><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+               <li><a href=""><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+               <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+               <li><a href=""><i class="fa fa-stumbleupon" aria-hidden="true"></i></a></li>
+               <li class="wifi"><a href=""><i class="fa fa-wifi" aria-hidden="true"></i></a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -231,6 +234,230 @@
       </div>
     </section>
     <!-- why this section code end from here -->
+
+    <!-- pricing section code start from here -->
+    <section class="pricing" id="pricing">
+      <div class="container">
+        <div class="upper">
+          <h1>PRICING OPTIONS</h1>
+          <div class="line-5"></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="row items">
+          <div class="col-md-4">
+            <div class="table">
+              <div class="table-head">
+                <h5>Basic</h5>
+              </div>
+              <div class="table-body">
+                <h1><span style="font-style: normal;">$</span>0</h1>
+                <span>Free For Life</span>
+              </div>
+              <div class="table-footer">
+                <ul>
+                  <li>1 gb of space</li>
+                  <li>10 gb of bandwidth</li>
+                  <li>3 websites</li>
+                  <li>Basic Customization</li>
+                  <li>wordpress integration</li>
+                  <li>email support</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 middle">
+            <div class="table">
+              <div class="table-head">
+                <h5>Professional</h5>
+              </div>
+              <div class="table-body">
+                <div class="middle-body">
+                  <h1><span style="font-style: normal;">$</span>19</h1>
+                  <span>Monthly Payment</span>
+                </div>
+                <div class="popular">
+                  <p>Our Most popular</p>
+                </div>
+              </div>
+              <div class="table-footer">
+                <ul>
+                  <li>5 gb space</li>
+                  <li>50 gb bandwidth</li>
+                  <li>12 websites</li>
+                  <li>Advance Customization</li>
+                  <li>wordpress integration</li>
+                  <li>email support</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="table">
+              <div class="table-head">
+                <h5>Enterprise</h5>
+              </div>
+              <div class="table-body">
+                <h1><span style="font-style: normal;">$</span>70</h1>
+                <span>Monthly Payment</span>
+              </div>
+              <div class="table-footer">
+                <ul>
+                  <li>Unlinited gb space</li>
+                  <li>Unlinited gb bandwidth</li>
+                  <li>100 websites</li>
+                  <li>Advance Customization</li>
+                  <li>wordpress integration</li>
+                  <li>24/7 customer support</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- pricing section code end from here -->
+
+    <!-- feedback section code start from here -->
+    <section class="feedback" id="feedback">
+      <div class="container">
+        <div class="upper-2">
+          <h1>WHAT OUR CUSTOMERS ARE SAYING</h1>
+          <div class="line-6"></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="comment-1">
+              <div class="comment-box">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
+                <div class="mini-box"></div>
+              </div>
+              <div class="comment-user">
+                <div class="row ">
+                  <div class="col-md-3">
+                    <img src="img/customer.png">
+                  </div>
+                  <div class="col-md-9">
+                    <h6>Jeremy H.</h6>
+                    <p>Manager</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="comment-1">
+              <div class="comment-box">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
+                <div class="mini-box"></div>
+              </div>
+              <div class="comment-user">
+                <div class="row ">
+                  <div class="col-md-3">
+                    <img src="img/customer.png">
+                  </div>
+                  <div class="col-md-9">
+                    <h6>Jonh S.</h6>
+                    <p>Freelancer</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="comment-1">
+              <div class="comment-box">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
+                <div class="mini-box"></div>
+              </div>
+              <div class="comment-user">
+                <div class="row ">
+                  <div class="col-md-3">
+                    <img src="img/customer.png">
+                  </div>
+                  <div class="col-md-9">
+                    <h6>Susan W.</h6>
+                    <p>Photographer</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- feedback section code end from here -->
+
+    <!-- custom section code start from here -->
+    <section class="custom">
+      <div class="container">
+        <div class="custom-style">
+          <h1>STYLISH AXURE DESIGN</h1>
+          <div class="line-7"></div>
+          <p>Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+          <button class="b-btn">Download</button>
+        </div>
+      </div>
+    </section>
+    <!-- custom section code end from here -->
+
+    <!-- contact section code start from here -->
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="upper">
+          <h1>CONTACT US</h1>
+          <div class="line-4"></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="contact-left">
+              <form>
+                <div class="card">
+                  <div class="card-body">
+                    <input type="text" name="" placeholder="Name" class="form-control">
+                    <input type="email" name="" placeholder="Email" class="form-control">
+                    <input type="text" name="" placeholder="Subject" class="form-control">
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="contact-right">
+              <form>
+                <div class="form-group">
+                  <textarea class="form-control" rows="5" id="comment" placeholder="Message"></textarea>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <form class="custom-btn">
+          <input type="submit" name="" value="Send Message" class="c-btn">
+        </form>
+      </div>
+    </section>
+    <!-- contact section code end from here -->
+
+    <!-- footer section code start from here -->
+    <section class="footer">
+      <div class="container">
+        <div class="footer-icon">
+          <ul>
+            <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-stumbleupon" aria-hidden="true"></i></a></li>
+            <li class="wifi"><a href=""><i class="fa fa-wifi" aria-hidden="true"></i></a></li>
+          </ul>
+          <p>© 2015 Axure Themes</p>
+        </div>
+      </div>
+    </section>
+    <!-- footer section code end from here -->
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
