--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- custom css stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
 
     <title>Axit!</title>
   </head>
@@ -28,7 +29,7 @@
          <nav class="navbar navbar-expand-lg navbar-light">
  <div class="container-fluid">
     <a class="navbar-brand mt-2 mb-2" href="#">
-      <img src="img/logo.png">
+      <img src="img/logo.png" class="img-fluid">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -153,7 +154,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <img src="img/feature.png">
+            <img src="img/feature.png" class="img-fluid">
           </div>
         </div>
       </div>
@@ -165,7 +166,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <img src="img/feature-2.png">
+            <img src="img/feature-2.png" class="img-fluid">
           </div>
           <div class="col-md-5">
             <h4>Sub list section</h4>
@@ -198,7 +199,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
           </div>
           <div class="col-md-5">
-            <img src="img/feature-3.png">
+            <img src="img/feature-3.png" class="img-fluid">
           </div>
         </div>
       </div>
